Images shifting while changing fixed

--- a/client/src/styles/imageSlider.scss
+++ b/client/src/styles/imageSlider.scss
@@ -1,9 +1,13 @@
 @use './variables.scss' as *;
 
 .homeImageSliderSection{
+    .sliderImage{
+        height: 400px;
+        object-fit: cover;
+    }
     .sliderTitle{
         position: absolute;
-        font-size: 3rem;
+        font-size: 2.5rem;
         color: #fff;
         font-family: "Rock Salt", cursive;
         top: 10%;
